Added some tests and fixed the validation of nullables inside expressions.

--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -52,7 +52,8 @@
     <Compile Include="Clocks\ClockExtensions.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ShiftedClock.cs" />
-    <Compile Include="Constraints\Decoders\AndCallAppender.T2.cs" />
+    <Compile Include="Constraints\Decoders\HasValueCallAppender.T2.cs" />
+    <Compile Include="Constraints\Decoders\IsNotNullAndCallAppender.T2.cs" />
     <Compile Include="Constraints\Decoders\AndExpressionDecoder.T3.cs" />
     <Compile Include="Constraints\AndMemberConstraint.T3.cs" />
     <Compile Include="Constraints\Decoders\ExpressionBuilder.T2.cs" />
