--- a/BuildingBlocks.Server.Unity/06.BuildingBlocks.Server.Unity.csproj
+++ b/BuildingBlocks.Server.Unity/06.BuildingBlocks.Server.Unity.csproj
@@ -39,6 +39,12 @@
     <DocumentationFile>bin\Release\Kingo.BuildingBlocks.Server.Unity.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\Kingo.BuildingBlocks.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
@@ -63,6 +69,9 @@
     <Compile Include="ComponentModel\Server\UnityFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Kingo.BuildingBlocks.snk">
+      <Link>Properties\Kingo.BuildingBlocks.snk</Link>
+    </None>
     <None Include="02.BuildingBlocks.Server.Unity.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
