--- a/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/BuildingBlocks/02.BuildingBlocks.csproj
@@ -53,10 +53,8 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="ArrayExtensions.cs" />
-    <Compile Include="Clocks\AsyncLocalClockContext.cs" />
     <Compile Include="Clocks\Clock.cs" />
     <Compile Include="Clocks\ClockExtensions.cs" />
-    <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ShiftedClock.cs" />
     <Compile Include="CompositeValidator.T1.cs" />
     <Compile Include="Constraints\Decoders\HasValueCallAppender.T2.cs" />
@@ -179,6 +177,7 @@
     <Compile Include="IValidator.T1.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Messaging\Message.T1.cs" />
+    <Compile Include="Threading\Context.T1.cs" />
     <Compile Include="Validator.T1.cs" />
     <Compile Include="ErrorInfo.cs" />
     <Compile Include="Clocks\HighResolutionClock.cs" />
@@ -187,7 +186,6 @@
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="HashCode.cs" />
     <Compile Include="Clocks\IClock.cs" />
-    <Compile Include="Clocks\IClockContext.cs" />
     <Compile Include="IRange.T1.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Range.T1.cs" />
@@ -197,7 +195,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
-    <Compile Include="Clocks\StaticClockContext.cs" />
     <Compile Include="Clocks\DefaultClock.cs" />
     <Compile Include="Threading\AsyncLocal.T1.cs" />
     <Compile Include="Threading\AsyncMethod.cs" />
