--- a/Kingo.Tests/01.Kingo.Tests.csproj
+++ b/Kingo.Tests/01.Kingo.Tests.csproj
@@ -113,7 +113,7 @@
     <Compile Include="RangeTest.cs" />
     <Compile Include="Constraints\StringConstraintsTest.cs" />
     <Compile Include="Constraints\ValidatedMessage.T1.cs" />
-    <Compile Include="Messaging\MessageErrorInfoExtensions.cs" />
+    <Compile Include="Messaging\ErrorInfoExtensions.cs" />
     <Compile Include="Clocks\HighResolutionClockTest.cs" />
     <Compile Include="Clocks\StopwatchClockTest.cs" />
     <Compile Include="Clocks\DefaultClockTest.cs" />
