--- a/Kingo.Tests/01.Kingo.Tests.csproj
+++ b/Kingo.Tests/01.Kingo.Tests.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="CompositeValidatorTest.cs" />
     <Compile Include="ErrorInfoTest.cs" />
+    <Compile Include="Messaging\Domain\DomainEventTest.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Clocks\ClockTest.cs" />
     <Compile Include="Clocks\ShiftedClockTest.cs" />
