--- a/Kingo/02.Kingo.csproj
+++ b/Kingo/02.Kingo.csproj
@@ -104,8 +104,12 @@
     <Compile Include="Constraints\PushIndexListTransformer.cs" />
     <Compile Include="Constraints\StringConstraints.IsIdentifier.cs" />
     <Compile Include="EnumOperators.T1.cs" />
-    <Compile Include="Messaging\IKeyedObject.T1.cs" />
-    <Compile Include="Messaging\IVersionedObject.T2.cs" />
+    <Compile Include="Messaging\Domain\AggregateMemberAttribute.cs" />
+    <Compile Include="Messaging\Domain\AggregateMemberType.cs" />
+    <Compile Include="Messaging\Domain\DomainEvent.cs" />
+    <Compile Include="Messaging\Domain\DomainEvent.T3.cs" />
+    <Compile Include="Messaging\Domain\IKeyedObject.T1.cs" />
+    <Compile Include="Messaging\Domain\IVersionedObject.T2.cs" />
     <Compile Include="Messaging\ErrorInheritanceLevel.cs" />
     <Compile Include="Messaging\ErrorMessageReader.cs" />
     <Compile Include="Identifier.cs" />
