--- a/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
+++ b/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Kingo</RootNamespace>
     <AssemblyName>Kingo.Server.TestEngine</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
@@ -60,9 +60,11 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Messaging\AlternateFlow.T1.cs" />
+    <Compile Include="Messaging\Domain\MemoryRepository.T3.cs" />
     <Compile Include="Messaging\ExecutionFlow.T1.cs" />
     <Compile Include="Messaging\HappyFlow.T1.cs" />
     <Compile Include="Messaging\IExecutable.cs" />
+    <Compile Include="Messaging\WriteOnlyScenario.T1.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Messaging\Scenario.cs" />
     <Compile Include="Messaging\Scenario.T1.cs" />
