--- a/Kingo.Server/04.Kingo.Server.csproj
+++ b/Kingo.Server/04.Kingo.Server.csproj
@@ -58,6 +58,7 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="Messaging\DependencyConfiguration.cs" />
     <Compile Include="Messaging\Domain\Aggregate.T1.cs" />
     <Compile Include="Messaging\Domain\AggregateSet.T1.cs" />
     <Compile Include="Messaging\Domain\DomainEventStream.T2.cs" />
@@ -65,12 +66,11 @@
     <Compile Include="Messaging\Domain\EventStreamRepository.T3.cs" />
     <Compile Include="Messaging\Domain\IRepository.T2.cs" />
     <Compile Include="Messaging\Domain\SnapshotRepository.T3.cs" />
-    <Compile Include="Messaging\IDependencyConfiguration.cs" />
     <Compile Include="Messaging\ClassAndMethodAttributeProvider.cs" />
-    <Compile Include="Messaging\DependencyToConfigurationMapping.cs" />
     <Compile Include="Messaging\Domain\AggregateNotFoundByKeyException.T2.cs" />
     <Compile Include="Messaging\Domain\Entity.T1.cs" />
     <Compile Include="Messaging\EmptySequence.cs" />
+    <Compile Include="Messaging\IDependencyConfiguration.cs" />
     <Compile Include="Messaging\IMessageHandlerOrQuery.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\IMessageSequence.cs" />
@@ -78,7 +78,6 @@
     <Compile Include="Messaging\MessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\MessageHandlerDispatcher.cs" />
     <Compile Include="Messaging\MessageHandlerInstance.T1.cs" />
-    <Compile Include="Messaging\MessageHandlerToConfigurationMapping.cs" />
     <Compile Include="Messaging\MessageSequence.cs" />
     <Compile Include="Messaging\MessageSequenceConcatenation.cs" />
     <Compile Include="Messaging\MessageSequenceNode.T1.cs" />
@@ -87,7 +86,7 @@
     <Compile Include="Clocks\ClockModule.cs" />
     <Compile Include="Messaging\IMessageToStrategyMapping.T1.cs" />
     <Compile Include="Messaging\IQuery.T1.cs" />
-    <Compile Include="Messaging\MessageHandlerDependencyAttribute.cs" />
+    <Compile Include="Messaging\DependencyAttribute.cs" />
     <Compile Include="Messaging\IMessageHandler.cs" />
     <Compile Include="Messaging\MessageHandler.cs" />
     <Compile Include="Messaging\MessageHandler.T1.cs" />
@@ -175,7 +174,6 @@
     <None Include="05.BuildingBlocks.Server.nuspec">
       <SubType>Designer</SubType>
     </None>
-    <Compile Include="Messaging\DependencyConfiguration.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
