--- a/Kingo.Server/04.Kingo.Server.csproj
+++ b/Kingo.Server/04.Kingo.Server.csproj
@@ -96,11 +96,11 @@
     <Compile Include="Messaging\QueryModule.T1.cs" />
     <Compile Include="Messaging\QueryPipeline.cs" />
     <Compile Include="Messaging\QueryWrapper.T2.cs" />
-    <Compile Include="Messaging\AuthorizationModule.cs" />
-    <Compile Include="Messaging\ITransactionScopeFactory.cs" />
-    <Compile Include="Messaging\TransactionScopeAttribute.cs" />
-    <Compile Include="Messaging\TransactionScopeFactory.cs" />
-    <Compile Include="Messaging\TransactionScopeModule.cs" />
+    <Compile Include="Security\AuthorizationModule.cs" />
+    <Compile Include="Transactions\ITransactionScopeFactory.cs" />
+    <Compile Include="Transactions\TransactionScopeAttribute.cs" />
+    <Compile Include="Transactions\TransactionScopeFactory.cs" />
+    <Compile Include="Transactions\TransactionScopeModule.cs" />
     <Compile Include="Messaging\Query.T2.cs" />
     <Compile Include="AssemblySet.cs" />
     <Compile Include="Messaging\MessageHandlerDelegate.T1.cs" />
