Added login and challenge features.

--- a/examples/Clients.Console/App.config
+++ b/examples/Clients.Console/App.config
@@ -18,13 +18,13 @@
     <behaviors>
       <endpointBehaviors>
         <behavior>
-          <SessionHeaderBehavior />
+          <SessionBehavior />
         </behavior>        
       </endpointBehaviors>
     </behaviors>
     <extensions>
       <behaviorExtensions>
-        <add name="SessionHeaderBehavior" type="Kingo.Samples.Chess.SessionHeaderBehavior+ExtensionElement, Kingo.Samples.Chess.Api" />
+        <add name="SessionBehavior" type="Kingo.Samples.Chess.SessionBehavior+ExtensionElement, Kingo.Samples.Chess.Api" />
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
