--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -36,13 +36,13 @@
       </serviceBehaviors>
       <endpointBehaviors>
         <behavior>
-          <SessionHeaderBehavior />
+          <SessionBehavior />
         </behavior>
       </endpointBehaviors>
     </behaviors>
     <extensions>
       <behaviorExtensions>
-        <add name="SessionHeaderBehavior" type="Kingo.Samples.Chess.SessionHeaderBehavior+ExtensionElement, Kingo.Samples.Chess.Api" />
+        <add name="SessionBehavior" type="Kingo.Samples.Chess.SessionBehavior+ExtensionElement, Kingo.Samples.Chess.Api" />
       </behaviorExtensions>
     </extensions>
     <bindings>
@@ -53,5 +53,5 @@
         <binding maxReceivedMessageSize="2147483647" />
       </netTcpBinding>
     </bindings>
-  </system.serviceModel>  
+  </system.serviceModel>    
 </configuration>
