--- a/examples/Server.Api/02.Server.Api.csproj
+++ b/examples/Server.Api/02.Server.Api.csproj
@@ -30,9 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo, Version=2.0.9.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo, Version=2.0.11.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.2.0.9-beta\lib\net45\Kingo.dll</HintPath>
+      <HintPath>..\packages\Kingo.2.0.11-beta\lib\net45\Kingo.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -48,9 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Challenges\ChallengePlayerCommand.cs" />
+    <Compile Include="Challenges\GetChallengesRequest.cs" />
+    <Compile Include="Challenges\GetChallengesResponse.cs" />
     <Compile Include="Challenges\IChallengeService.cs" />
-    <Compile Include="SessionHeader.cs" />
-    <Compile Include="SessionHeaderBehavior.cs" />
+    <Compile Include="Challenges\PendingChallenge.cs" />
+    <Compile Include="Challenges\PlayerChallengedEvent.cs" />
+    <Compile Include="SessionBehavior.cs" />
     <Compile Include="Players\GetPlayersRequest.cs" />
     <Compile Include="Players\GetPlayersResponse.cs" />
     <Compile Include="Players\IPlayerService.cs" />
