--- a/examples/Server.Tests/01.Server.Tests.csproj
+++ b/examples/Server.Tests/01.Server.Tests.csproj
@@ -36,17 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo, Version=2.0.11.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.11-beta\lib\net451\Kingo.dll</HintPath>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.dll</HintPath>
     </Reference>
-    <Reference Include="Kingo.Server, Version=2.0.11.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo.Server, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.11-beta\lib\net451\Kingo.Server.dll</HintPath>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.Server.dll</HintPath>
     </Reference>
-    <Reference Include="Kingo.Server.TestEngine, Version=2.0.11.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo.Server.TestEngine, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.11-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -83,6 +83,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Challenges\AcceptChallenge\ChallengeDoesNotExistScenario.cs" />
+    <Compile Include="Challenges\AcceptChallenge\ChallengeIsAcceptedScenario.cs" />
+    <Compile Include="Challenges\AcceptChallenge\PlayerIsNotReceiverScenario.cs" />
     <Compile Include="Challenges\ChallengePlayer\PlayerIsChallengedScenario.cs" />
     <Compile Include="Challenges\ChallengePlayer\ReceiverNotRegisteredScenario.cs" />
     <Compile Include="Challenges\ChallengePlayer\SenderEqualToReceiverScenario.cs" />
