--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -54,4 +54,12 @@
       </netTcpBinding>
     </bindings>
   </system.serviceModel>    
+  <runtime>    
+         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">    
+                <dependentAssembly>    
+                       <assemblyIdentity name="Kingo" publicKeyToken="cbd9f157c5e464e2" culture="neutral" />    
+                       <bindingRedirect oldVersion="0.0.0.0-2.0.12.0" newVersion="2.0.12.0" />    
+                </dependentAssembly>    
+         </assemblyBinding>    
+  </runtime>
 </configuration>
