--- a/examples/Clients.Console/packages.config
+++ b/examples/Clients.Console/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Kingo" version="2.0.12-beta" targetFramework="net451" />
+  <package id="Kingo" version="2.0.13-beta" targetFramework="net451" />
+  <package id="NServiceBus" version="5.2.12" targetFramework="net451" />
 </packages>
