--- a/examples/Server.Tests/01.Server.Tests.csproj
+++ b/examples/Server.Tests/01.Server.Tests.csproj
@@ -36,17 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.dll</HintPath>
+    <Reference Include="Kingo">
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.dll</HintPath>
     </Reference>
-    <Reference Include="Kingo.Server, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.Server.dll</HintPath>
+    <Reference Include="Kingo.Server">
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.Server.dll</HintPath>
     </Reference>
-    <Reference Include="Kingo.Server.TestEngine, Version=2.0.12.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.12-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
+    <Reference Include="Kingo.Server.TestEngine">
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -63,6 +60,9 @@
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="NServiceBus.Core">
+      <HintPath>..\packages\NServiceBus.5.2.12\lib\net45\NServiceBus.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -102,8 +102,8 @@
     <Compile Include="Players\RegisterPlayer\PlayerAlreadyRegisteredScenario.cs" />
     <Compile Include="Players\MemoryPlayerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WriteOnlyProcessor.cs" />
-    <Compile Include="WriteOnlyScenario.T1.cs" />
+    <Compile Include="MemoryProcessor.cs" />
+    <Compile Include="MemoryScenario.T1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Server.Api\02.Server.Api.csproj">
@@ -128,6 +128,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
