--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />    
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
+  </configSections>
   <connectionStrings>
     <add name="Server.Data.Sql" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Kingo.Samples.Chess;Integrated Security=True;Pooling=True" />
-  </connectionStrings>  
+  </connectionStrings>
   <system.web>
     <compilation debug="true" />
   </system.web>
-  <system.serviceModel>    
-    <services>      
+  <system.serviceModel>
+    <services>
       <service name="Kingo.Samples.Chess.Challenges.ChallengeService">
         <host>
           <baseAddresses>
@@ -53,13 +58,15 @@
         <binding maxReceivedMessageSize="2147483647" />
       </netTcpBinding>
     </bindings>
-  </system.serviceModel>    
-  <runtime>    
-         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">    
-                <dependentAssembly>    
-                       <assemblyIdentity name="Kingo" publicKeyToken="cbd9f157c5e464e2" culture="neutral" />    
-                       <bindingRedirect oldVersion="0.0.0.0-2.0.12.0" newVersion="2.0.12.0" />    
-                </dependentAssembly>    
-         </assemblyBinding>    
-  </runtime>
+  </system.serviceModel>  
+  
+  <!-- BEGIN NServiceBus -->
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />  
+  <UnicastBusConfig>
+    <MessageEndpointMappings>
+      <add Assembly="Kingo.Samples.Chess.Api" Endpoint="kingo.samples.chess" />
+    </MessageEndpointMappings>
+  </UnicastBusConfig>
+  <AuditConfig QueueName="audit" />  
+  <!-- END NServiceBus -->
 </configuration>
